@@ -18,14 +18,14 @@ package org.apache.lucene.index;
  */
 
 import java.io.IOException;
-import java.util.Locale;
-import java.util.Map;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
-import java.util.ArrayList;
+import java.util.Locale;
+import java.util.Map;
 
 /**
  *  Merges segments of approximately equal size, subject to
@@ -614,10 +614,6 @@ public class TieredMergePolicy extends MergePolicy {
     }
 
     return spec;
-  }
-
-  @Override
-  public void close() {
   }
 
   private long floorSize(long bytes) {
